<resources>
    <string name="app_name">ChatNow</string>
    <string name="nombre_desarrollador">Jorge Solana Holgado</string>
    <string name="btn_ir_logeo">Ingresar con Email</string>
    <string name="btn_login_google">Ingresar con Google</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="principal">Principal</string>
    <string name="txt_no_cuenta">¿No tienes cuenta?</string>
    <string name="txt_ir_registro">Registrarme</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="R_Et_nombre_usuario">Nombre de usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_contrasenia">Contraseña</string>
    <string name="R_Et_r_contrasenia">Repita su contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_login">Ingresar</string>
    <string name="item_nombre_usuario">Nombre de usuario</string>
    <string name="item_email_usuario">Email de usuario</string>
    <string name="menu_principal">Menú principal</string>
    <string name="menu_perfil">Perfil de usuario</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_salir">Cerrar sesion</string>
    <string name="menu_visitar_perfil">Visitar perfil</string>
    <string name="menu_visitar">Visitar perfil</string>
    <string name="et_buscar_usuario">Buscar usuario</string>
    <string name="p_n_usuario">Nombre de usuario</string>
    <string name="p_proveedor_txt">Proveedor: </string>
    <string name="p_proveedor">--</string>
    <string name="p_email">Email</string>
    <string name="p_nombre">Nombre</string>
    <string name="p_apellido">Apellidos</string>
    <string name="p_profesion">Profesión</string>
    <string name="p_domicilio">Domicilio</string>
    <string name="p_edad">Edad</string>
    <string name="p_telefono">Telefono</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_elegir_imagen">Elegir imagen</string>
    <string name="btn_actualizar_imagen">Actualizar imagen</string>
    <string name="txt_seleccionar_imagen">Seleccionar imagen</string>
    <string name="btn_abrir_galeria">Galeria</string>
    <string name="btn_abrir_camara">Cámara</string>
    <string name="n_usuario_chat">Nombre de usuario</string>
    <string name="et_mensaje">Escriba un mensaje</string>
    <string name="txt_ver_mensaje">Hola, como estas</string>
    <string name="Establecer_telefono">Escriba su numero</string>
    <string name="btn_aceptar_telefono">Aceptar</string>
    <string name="btn_verificar">No verificado</string>
    <string name="cuenta_verificadaTXT">Cuenta verificada</string>
    <string name="btn_entendidoVerificado">Entendido</string>
    <string name="Btn_cerrar_v">Cerrar</string>
    <string name="PV_Perfil_TXT">Perfil de usuario</string>
    <string name="PV_NombreU">Nombre de usuario</string>
    <string name="PV_EmailU">Email de usuario</string>
    <string name="PV_Uid_TXT">Identificador: </string>
    <string name="PV_Uid">Uid</string>
    <string name="PV_nombres_TXT">Nombres: </string>
    <string name="PV_nombres"> - </string>
    <string name="PV_apellidos_TXT">Apellidos: </string>
    <string name="PV_apellidos"> - </string>
    <string name="PV_profesion_TXT">Profesión: </string>
    <string name="PV_profesion"> - </string>
    <string name="PV_telefono_TXT">Teléfono: </string>
    <string name="PV_telefono"> - </string>
    <string name="PV_edad_TXT">Edad: </string>
    <string name="PV_edad"> - </string>
    <string name="PV_domicilio_TXT">Domicilio: </string>
    <string name="PV_domicilio"> - </string>
    <string name="PV_proveedor_TXT">Proveedor: </string>
    <string name="PV_proveedor"> - </string>
    <string name="Btn_llamar">Llamar</string>
    <string name="Btn_enviar_sms">Enviar sms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="titulo_progress_dialog">Iniciando sesión</string>
    <string name="default_web_client_id" translatable="false">990360079958-stm3q39q4m7llqeeagt2l58hh2uofu80.apps.googleusercontent.com</string>
    <string name="Desarrollador">Desarrollado por : Jorge Solana Holgado</string>
    <string name="CorreoSoporte">Email: solanaholgadojorge@gmail.com</string>
    <string name="Version">Version 1.0</string>
    <string name="EntendidoInfo">Entendido</string>
    <string name="Txt_olvide_password">olvide mi contraseña</string>
    <string name="Txt_instrucciones">Ingrese su correo electrónico registrado para recibir las instrucciones para reestablecer su contraseña</string>
    <string name="Btn_enviar_correo">Enviar</string>
    <string name="mensaje_visto">visto</string>
    <string name="mensaje_enviado">Enviado</string>
    <string name="mensaje_eliminado">Mensaje eliminado</string>
    <string name="mensaje_no_eliminado">No se ha eliminado el mesjae, intente nuevamente</string>
    <string name="opcion_eliminar">Eliminar mensaje</string>
    <string name="opcion_cancelar">Cancelar</string>
    <string name="que_realizar">¿Qué desea realizar?</string>
    <string name="opcion_imagen">Ver imagen completa</string>
    <string name="imagen_enviada">Imagen enviada</string>
    <string name="no_mensaje">No hay mensajes</string>
    <string name="enviando_imagen">La imagen se esta enviando</string>
    <string name="cancelado_usuario">Cancelado por el usuario</string>
    <string name="buscar">buscar</string>
    <string name="esperar">Espere por favor</string>
    <string name="imagen_necesaria">es necesario una imagen</string>
    <string name="actualizando_imagen">Actualizando imagen</string>
    <string name="fallo_imagen">No se ha podido subir la imagen debido a</string>
    <string name="verificar_cuenta">Verificar cuenta</string>
    <string name="correo_verificacion">¿Estas seguro de enviar instrucciones de verificacion a su correo electrónico?</string>
    <string name="enviar">Enviar</string>
    <string name="envio_correo_verificacion">Enviando instrucciones de verificacion a su correo electronico</string>
    <string name="revise_correo">Instrucciones enviada, revise el correo electronico</string>
    <string name="fallo_operacion">La operacion fallo debido a:</string>
    <string name="verificado">Verificado</string>
    <string name="no_verificaddo">No verificado</string>
    <string name="ingrese_numero_telefonico">Ingrese un numero telefonico</string>
    <string name="datos_actualizados">Se han actualizado los datos</string>
    <string name="datos_no_actualizados">No se han actualizado los datos</string>
    <string name="error">Ha ocurrido un error</string>
    <string name="no_telefono">El usuario no cuenta con número de telefono</string>
    <string name="no_permiso_llamada">El permiso para realizar llamada telefonica no ha sido concedido</string>
    <string name="no_permiso_sms">El permiso para enviar mensaje SMS no ha sido concedido</string>
    <string name="cancelado">Cancelado</string>
    <string name="registrando_informacion">Se esta registrando tu informacion...</string>
    <string name="registro_exitoso">"Se ha registrado exitosamente "</string>
    <string name="sesion_activa">La sesion esta activa</string>
    <string name="ingrese_correo">Ingrese su correo electronico</string>
    <string name="ingrese_contrasena">Ingrese su contraseña</string>
    <string name="chats">Chats</string>
    <string name="usuarios">Usuarios</string>
    <string name="correo_no_valido">Correo no valido</string>
    <string name="envio_cambio_contrasena">Enviando instrucciones de reestablecimiento de contraseña al correo</string>
    <string name="error_actualizar_usuario">Error al actualizar el usuario</string>
    <string name="ingrese_usuario">Ingrese nombre de usuario</string>
    <string name="repita_contrasena">Repita la contraseña</string>
    <string name="no_coinciden_contrasena">Las contraseñas no coinciden</string>


</resources>