<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Olvide_password">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:lottie_fileName="password.json"
        app:lottie_imageAssetsFolder="assets"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:text="@string/Txt_olvide_password"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Txt_instrucciones"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/L_Et_email"
            android:hint="@string/R_Et_email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_enviar_correo"
        android:text="@string/Btn_enviar_correo"
        app:icon="@drawable/ic_enviar"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>