<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.PerfilActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            
            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/imagen_portada"
                android:layout_width="match_parent"
                android:layout_height="220dp"/>

            <ImageView
                android:id="@+id/P_imagen"
                android:background="#354f60"
                android:layout_marginTop="130dp"
                android:layout_marginStart="15dp"
                android:scaleType="centerCrop"
                android:layout_width="140dp"
                android:layout_height="140dp"/>
            
            <ImageView
                android:id="@+id/editar_imagen"
                android:layout_marginStart="130dp"
                android:layout_marginTop="230dp"
                android:src="@drawable/editar_imagen_perfil"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/P_n_usuario"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/p_n_usuario"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/P_email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/p_email"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_proveedor_txt"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0.5dp"
                    android:backgroundTint="@color/teal_700"
                    android:layout_marginStart="5dp"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/p_proveedor"
                        android:text="@string/p_proveedor"
                        android:textSize="17sp"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verificar"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_verificar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/p_nombre"
                    android:hint="@string/p_nombre"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>




            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/p_apellido"
                    android:hint="@string/p_apellido"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/p_profesion"
                    android:hint="@string/p_profesion"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/p_domicilio"
                    android:hint="@string/p_domicilio"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/p_edad"
                    android:hint="@string/p_edad"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/p_telefono"
                    android:text="@string/p_telefono"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>
-
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editar_telefono"
                    android:src="@drawable/telefono"
                    android:layout_marginStart="15dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>




            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_guardar"
                android:text="@string/btn_guardar"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:icon="@drawable/ic_guardar_informacion"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>
    
    
    

</ScrollView>